# LevelsNetwork

./: .gitignore  Procfile  pyproject.toml  requirements.txt
LevelsNetwork/config/: asgi.py  settings.py  urls.py  wsgi.py
LevelsNetwork/src/profiles/: admin.py  models.py
LevelsNetwork/src/profiles/migrations/: 0001_initial.py
config/: .env.dev  settings.py  urls.py
djangoProject/: settings.py  urls.py  views.py
employees/: urls.py  views.py
finances/: urls.py  views.py
projects/: urls.py  views.py
src/: routers.py
src/base/: permissions.py  serializers.py
src/feed/: services.py  views.py
src/followers/: models.py  serializers.py  views.py
src/followers/migrations/: 0001_initial.py  0002_auto_20201010_2249.py  0003_alter_follower_id.py
src/profiles/: admin.py  models.py  serializers.py  views.py
src/profiles/migrations/: 0001_initial.py  0002_auto_20231005_17.py  0003_alter_technology_id_alter_usernet_id.py  0004_remove_usernet_technology_delete_technology.py  0005_remove_usernet_avatar.py
src/wall/: admin.py  models.py  views.py
src/wall/migrations/: 0001_initial.py  0002_auto_20230531_23.py  0003_alter_comment_id_alter_post_id.py
timeReporting/: apps.py  urls.py  views.py
