[tool.poetry]
name = "levelsnetwork"
version = "0.1.0"
description = ""
authors = ["LevelsGroup <levels@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
djangorestframework = "^3.14.0"
pillow = "^9.4.0"
djoser = "^2.1.0"
psycopg2-binary = "^2.9.5"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
